--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,29 @@
 :root {
-    --primary-color: #f1c40f;
-    --light-gray:
+    --light-gray: #34495e;
+    --primary-color: #3498db;
+    --border: #2c3e50;
+    --text-color: #e67e22;
+    --roboto: "Roboto", sans-serif;
+    --gugi: "Gugi", cursive;
+    --sofia: "Sofia", cursive;
+}
+
+.primary-color {
+    color: var(--primary-color);
+}
+
+.bg-primary-color {
+    background-color: var(--primary-color) !important;
+}
+
+.text-color {
+    color: var(--text-color);
+}
+
+.font-roboto {
+    font-family: var(--roboto);
+}
+
+.lightblue {
+    color: lightblue;
 }
