--- a/css/style.css
+++ b/css/style.css
@@ -27,3 +27,14 @@
 .lightblue {
     color: lightblue;
 }
+
+/*header*/
+
+header {
+    background-color: var(--primary-color);
+    font-family: var(--roboto);
+}
+
+header .site-title {
+    font-family: ;
+}
