--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ header .site-title {
     color: var(--light-gray);
 }
 
-.slider-two.slick-track.products:hover span {
+.slider-two.slick-track.product:hover span {
     background-color: var(--primary-color);
 
 }
