--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 :root {
-    --light-gray: #34495e;
-    --primary-color: #3498db;
-    --border: #2c3e50;
-    --text-color: #e67e22;
+    --light-gray: #2b3032a1;
+    --primary-color: #45ccb8;
+    --border: #2b303218;
+    --text-color: #ff686b;
     --roboto: "Roboto", sans-serif;
     --gugi: "Gugi", cursive;
     --sofia: "Sofia", cursive;
@@ -78,7 +78,6 @@ header .site-title {
 .position-top {
     position: absolute;
     top: 50%;
-
 }
 
 .site-slider .slider-btn .prev,
@@ -132,7 +131,7 @@ header .site-title {
 
 .slick-dots li.slick-active button {
     transform: scale(2.5);
-    box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 205);
+    box-shadow: 0px 3px 5px 1px rgba(0, 0, 0, 0.205);
 
 }
 
